Fixed minor gap annoyance

--- a/style.css
+++ b/style.css
@@ -170,7 +170,7 @@ ul {
 .input {
     display: flex;
     justify-content: space-between;
-    gap: 60px;
+    gap: 50px;
     padding: 80px 60px;
     background-color: #f0ca99;
     border-radius: 10px;
